fix(globals.css): update neutral color value for improved contrast

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -66,7 +66,7 @@
   --color-secondary-content: oklch(29% 0.066 243.157);
   --color-accent: oklch(38% 0.063 188.416);
   --color-accent-content: oklch(95% 0.051 180.801);
-  --color-neutral: oklch(37% 0 0);
+  --color-neutral: oklch(68% 0 0);
   --color-neutral-content: oklch(98% 0 0);
   --color-info: oklch(60% 0.126 221.723);
   --color-info-content: oklch(98% 0.019 200.873);
